--- a/.github/workflows/test-build.yaml
+++ b/.github/workflows/test-build.yaml
@@ -1,7 +1,8 @@
-name: GitHub Actions Demo
+name: Build
 on: [push]
 jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
+      - uses: actions/checkout@v3
       - run: ./make-autoinstall-image.sh
