--- a/.github/workflows/test-build.yaml
+++ b/.github/workflows/test-build.yaml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-22.04
+    environment: env-with-sample-variables
     steps:
       - uses: actions/checkout@v3
       - run: sudo apt-get update && sudo apt-get install -y xorriso wget apt-rdepends
