--- a/.github/workflows/test-build.yaml
+++ b/.github/workflows/test-build.yaml
@@ -7,4 +7,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: sudo apt-get update && sudo apt-get install -y xorriso wget apt-rdepends
+      - run: env
       - run: ./make-autoinstall-image.sh
